test/constBlockConsuming16_4.slq

def foo(x:ğ”¹){
	y:=dup(x);
	z:=dup(y);
	if z{
		w:=X(z); /// error
	}else{
		w:=z;
		x:=H(x);
	}
	return (x,w);
}


